Finished curry.html

--- a/recipes/Curry.html
+++ b/recipes/Curry.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8">
     <title>Curry</title>
 </head>
-<body>
-    <h1>Curry</h1>
+<body class="aligncenter">
+
+    <h1 class=""><strong>Pomidorowe curry z ciecierzycy</strong></h1>
+    <p class="aligncenter"><img src="../Img/curry.jpg"  alt="curry picture" width="300" height="300"/></p>
+    <p> &emsp; Czas przygotowania: do 30 minut     </p>
+
+    <h2>Składniki (na 3-4 porcje)</h2>
+    <ul>
+        <li>    1 cebula    </li>
+        <li>    1 łyżeczka gorczycy <em>(można zastąpić musztardą)</em> </li>
+        <li>    1/2 łyżeczki soli   </li>
+        <li>    olej    </li>
+        <li>    1 łyżeczka kuminu  <em>(mielonego)</em> </li>
+        <li>    1/2 łyżeczki kurkumy    </li>
+        <li>    szczypta płatków chili  </li>
+        <li>    szczypta cynamonu   </li>
+        <li>    1 puszka mleka kokosowego / 400 ml </li>
+        <li>    1 puszka pomidorów krojonych    </li>
+        <li>    1 łyżka sosu sojowego        </li>
+        <li>    1/2 łyżeczki cukru trzcinowego</li>
+        <li>    3 puszki cieciorki  </li>
+    </ul>
+
+    <h2>Przygotowanie :</h2>
+    <ol>
+        <li>    <p>Cebulę pokroić w kostkę, na dnie dużej patelni rozgrzać olej. Dodać cebulę, gorczycę i sól, smażyć na średnim ogniu przez 4 – 5 minut. Jeśli nie macie gorczycy przeczytajcie porady. </p>        </li>
+        <li>    <p>Do podsmażonej cebuli dodać kumin, kurkumę, chili oraz cynamon. Zamieszać, smażyć przez kilkanaście sekund i dodać kokosowe mleko, pomidory, sos sojowy oraz cukier. Zwiększyć ogień na maksymalny i gotować przez 5 – 8 minut, czyli do momentu, aż sos się lekko zagęści i zrobi się błyszczący. </p></li>
+        <li>    Dodać odsączoną ciecierzycę, zmniejszyć ogień na średni i gotować przez 5 – 6 minut. Doprawić do smaku solą lub w razie potrzeby większą ilością cukru trzcinowego. Podawać z ryżem i ulubionymi warzywami, które można zanurzać w kremowym sosie.         </li>
+    </ol>
+
+    <h2>Porady:</h2>
+    <ul>
+        <li>    Jeśli nie macie gorczycy to ją pomińcie i dodajcie do curry razem z sosem sojowym 1 łyżeczkę musztardy. </li>
+        <li>    Do tego przepisu najlepsza będzie gorczyca czarna, ale dobra będzie też zwyczajna w kolorze żółtym, wtedy warto dodać jej trochę więcej.         </li>
+        <li>    Curry cały czas gotujecie bez przykrywki, dzięki temu sos ma szansę odparować i nabrać maślanego, kremowego smaku.         </li>
+        <li>    Dłuższe smażenie cebuli z gorczycą pozwala jednocześnie zaromatyzować olej oraz porządnie zmiękczyć cebulę. </li>
+        <li>    Dzięki temu przepisowi zyskacie sporo aquafaby, czyli zalewy ze słoika lub puszki. Pod żadnym pozorem jej nie wylewajcie, tylko wykorzystajcie do zrobienia musu czekoladowego, majonezu albo puszystych pancakes.         </li>
+    </ul>
 </body>
+
+<style>
+    .aligncenter {
+        text-align: center;
+    }
+    </style>
+    
+
 </html>
