--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <ul>
             <li>    <a href="recipes/Curry.html">Curry</a>  </li>
             <li>    <a href="recipes/Putanseca.html">Putanseca</a>  </li>
+            <li>    <a href="recipes/Salad.html">Salad</a>  </li>
+
         </ul>
     </h2>
 </body>
-</html>
+</html> 
