--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <h2>Recipes:
         <ul>
             <li>    <a href="recipes/Curry.html">Curry</a>  </li>
+            <img src="Img/curry.jpg" height="75" width="75"/>
             <li>    <a href="recipes/Putanseca.html">Putanseca</a>  </li>
             <li>    <a href="recipes/Salad.html">Salad</a>  </li>
+            <img src="Img/Salad.jpg" height="75" width="75"/>
 
-        </ul>
+            <li>    <a href="recipes/Mayo.html">Vegan mayonnaise</a></li>
+            <img    src="Img/Mayo.jpg">
+        </ul>   
     </h2>
 </body>
 </html> 
