Finished Mayo, centered index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
-<body>
+<body class="aligncenter">
     <h1>Odin Recipes</h1>
     <h2>Recipes:
         <ul>
@@ -17,8 +17,16 @@
             <img src="Img/Salad.jpg" height="75" width="75"/>
 
             <li>    <a href="recipes/Mayo.html">Vegan mayonnaise</a></li>
-            <img    src="Img/Mayo.jpg">
+            <img    src="Img/Mayo.jpg" height="75",width="75">
         </ul>   
     </h2>
 </body>
+
+
+<style>
+    .aligncenter {
+        text-align: center;
+    }
+    </style>
+    
 </html> 
