--- a/recipes/Mayo.html
+++ b/recipes/Mayo.html
@@ -4,7 +4,37 @@
     <meta charset="UTF-8">
     <title>Vegan mayonnaise</title>
 </head>
-<body>
-    
+<body class="aligncenter">
+
+    <h1>Vegan mayonnaise</h1>
+    <img src="../Img/Mayo.jpg" height="200" width="200">
+
+    <h2>Description:</h2>
+    <p> &emsp; Description</p>
+    <p> &emsp; Czas przygotowania: 10 minut </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>    ½ szklanki aquafaby / 125 ml</li>
+        <li>    1 łyżka płatków drożdżowych,        </li>
+        <li>    2 łyżeczki octu lub soku z cytryny        </li>
+        <li>    ¾ łyżeczki musztardy        </li>
+        <li>    ½ łyżeczki czarnej soli lub zwykłej soli    </li>
+        <li>    ¼ łyżeczki syropu z agawy lub dowolnego innego słodzika        </li>
+        <li>    1 ¼ – 2 szklanki oleju roślinnego</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ol>
+        <li>   Wszystkie składniki poza olejem umieścić w wysokim naczyniu blendera jak na zdjęciu imiksować przez 2 – 3 minuty na najwyższych obrotach do czasu, aż porządnie się spienią</li>
+        <li>    Następnie wlać olej – nie trzeba go kapać do środka jak w wypadku tradycyjnego majonezu, wystarczy po prostu wlać go do środka cienkim strumieniem. Gotowy majonez przełożyć do słoika, postarać się nie jeść go do każdego posiłku. Przechowywać w lodówce do 10 dni.     </li>
+    </ol>
 </body>
+
+<style>
+    .aligncenter {
+        text-align: center;
+    }
+    </style>
+    
 </html>
