--- a/recipes/Putanseca.html
+++ b/recipes/Putanseca.html
@@ -4,7 +4,47 @@
     <meta charset="UTF-8">
     <title>Putanesca</title>
 </head>
-<body>
+<body class="aligncenter">
     <h1>Putanesca</h1>
+    <img src = "../Img/putanesca.jpg" alt = "Putanesca photo" height="200" width="200">
+
+    <h2>Składniki:</h2>
+    <ul>
+        <li>500g spaghetti</li>
+        <li>1 lub 2 puszki pomidorów</li>
+        <li> łyżka miso / kostka rosołowa</li>
+        <li>1,5 łyżki tahini</li>
+        <li>1 cebula</li>
+        <li>2 ząbki czosnku</li>
+        <li>garść oliwek</li>
+        <li>garść suszonych pomidorów</li>
+        <li>garść kaparów</li>
+        <li>trochę oliwy</li>
+        <li>1,5 litra wody</li>
+
+    </ul>
+
+    <h2>Przygotowanie:</h2>
+    <ol>
+        <li>Zagotuj wodę w czajniku</li>
+        <li>Potnij cebulę i czosnek na małe kawałki</li>
+        <li>Zacznij podsmażać na dużej głębokiej patelni na jekiejś oliwie</li>
+        <li>Potnij suszone pomidory i oliwki</li>
+        <li>Jak cebula będzie już podsmażona zmniejsz ogień</li>
+        <li>Wrzuć makaron, tahini, miso, kostkę rosołową, pomidory (suszone i te z
+            puszki), oliwki i kapary</li>
+        <li>zalej wszystko wrzątkiem i spowrotem zwiększ ogień</li>
+        <li>Gotuj pod przykryciem około 15 minut od czasu do czasu mieszając, jeżeli
+            będzie zbyt wodniste to zdejmi pokrywkę, jeżel będzie zamało wodniste
+            dolej wody.</li>
+
+    </ol>
 </body>
+
+<style>
+    .aligncenter {
+        text-align: center;
+    }
+    </style>
+    
 </html>
