--- a/recipes/Mayo.html
+++ b/recipes/Mayo.html
@@ -7,7 +7,7 @@
 <body class="aligncenter">
 
     <h1>Vegan mayonnaise</h1>
-    <img src="../Img/Mayo.jpg" height="200" width="200">
+    <img src="../Img/Mayo.jpg" height="200" width="200" alt = "Mayo photo">
 
     <h2>Description:</h2>
     <p> &emsp; Description</p>
