Added alt to img in index.html and putanesca image

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <h2>Recipes:
         <ul>
             <li>    <a href="recipes/Curry.html">Curry</a>  </li>
-            <img src="Img/curry.jpg" height="75" width="75"/>
+            <img src="Img/curry.jpg" height="75" width="75" alt="Curry picture"/>
             <li>    <a href="recipes/Putanseca.html">Putanseca</a>  </li>
+            <img    src="Img/putanesca.jpg" height="75" width="75" alt="Putanesca picture">
             <li>    <a href="recipes/Salad.html">Salad</a>  </li>
-            <img src="Img/Salad.jpg" height="75" width="75"/>
+            <img src="Img/Salad.jpg" height="75" width="75" alt="Salad picture"/>
 
             <li>    <a href="recipes/Mayo.html">Vegan mayonnaise</a></li>
-            <img    src="Img/Mayo.jpg" height="75",width="75">
+            <img    src="Img/Mayo.jpg" height="75",width="75" alt="Mayo picture">
         </ul>   
     </h2>
 </body>
