--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="aligncenter">
+<body >
     <h1>Odin Recipes</h1>
     <h2>Recipes:
         <ul>
@@ -24,10 +25,5 @@
 </body>
 
 
-<style>
-    .aligncenter {
-        text-align: center;
-    }
-    </style>
     
 </html> 
