--- a/recipes/Salad.html
+++ b/recipes/Salad.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Salad</title>
+    <link rel="stylesheet" href="../style.css">
+
 </head>
 <body>
     <h1>Salad</h1>
